DD-41333: System prompt externalised and fixed a minor defect with chunks file name (#70)